# comp-graphics-hw

hw-1/: CMakeLists.txt
hw-1/figure/: FragmentShader.glsl  VertexShader.glsl  main.cpp
hw-1/triangles/: FragmentShader1.glsl  FragmentShader2.glsl  VertexShader.glsl  main.cpp
hw-1/util/: buffers.cpp  buffers.h  camera.cpp  camera.h  model.cpp  model.h  shader.cpp  shader.h  window_initializer.cpp  window_initializer.h
